--- a/.github/workflows/release-and-publish.yaml
+++ b/.github/workflows/release-and-publish.yaml
@@ -3,7 +3,7 @@ name: Release and Publish
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   release:
     types: [published]
 
@@ -11,50 +11,51 @@ permissions:
   contents: write
   packages: write
   pull-requests: read
+  actions: read
 
 jobs:
   test-before-release:
     name: Pre-Release Testing
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install coverage pytest pytest-cov
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install coverage pytest pytest-cov
 
-    - name: Run full test suite
-      run: |
-        echo "🧪 Running all 61 test cases before release..."
-        python -m unittest discover tests -v
+      - name: Run full test suite
+        run: |
+          echo "🧪 Running all 61 test cases before release..."
+          python -m unittest discover tests -v
 
-    - name: Run performance benchmarks
-      run: |
-        echo "🚀 Running performance benchmarks..."
-        python performance_test.py
+      - name: Run performance benchmarks
+        run: |
+          echo "🚀 Running performance benchmarks..."
+          python performance_test.py
 
-    - name: Validate package structure
-      run: |
-        echo "📦 Validating package structure..."
-        python -c "
-        import sys
-        sys.path.append('.')
-        from src.jquery import Query
-        
-        # Test basic functionality
-        query = Query([{'test': 'data'}])
-        assert len(query) == 1
-        assert query.first()['test'] == 'data'
-        
-        print('✅ Package structure validated')
-        "
+      - name: Validate package structure
+        run: |
+          echo "📦 Validating package structure..."
+          python -c "
+          import sys
+          sys.path.insert(0, 'src')
+          from jsonQ import Query
+
+          # Test basic functionality
+          query = Query([{'test': 'data'}])
+          assert len(query) == 1
+          assert query.first()['test'] == 'data'
+
+          print('✅ Package structure validated')
+          "
 
   build-and-publish:
     name: Build and Publish to PyPI
@@ -63,39 +64,38 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
     permissions:
       contents: read
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine wheel setuptools
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine wheel setuptools
 
-    - name: Build package
-      run: |
-        echo "🔨 Building package..."
-        python -m build
+      - name: Build package
+        run: |
+          echo "🔨 Building package..."
+          python -m build
 
-    - name: Check package
-      run: |
-        echo "🔍 Checking package..."
-        twine check dist/*
+      - name: Check package
+        run: |
+          echo "🔍 Checking package..."
+          twine check dist/*
 
-    
-    - name: Publish to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        echo "🚀 Publishing to PyPI..."
-        twine upload dist/*
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          echo "🚀 Publishing to PyPI..."
+          twine upload dist/*
 
   create-github-release:
     name: Create GitHub Release
@@ -104,164 +104,177 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Generate release notes
-      id: release_notes
-      run: |
-        echo "📝 Generating release notes..."
-        
-        # Extract version from tag
-        VERSION=${GITHUB_REF#refs/tags/v}
-        echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-        
-        # Create release notes
-        cat > release_notes.md << EOF
-        # jsonQ v$VERSION Release
-        
-        ## 🎉 What's New
-        
-        This release includes comprehensive improvements to the jsonQ library:
-        
-        ### ✨ Features
-        - **61 comprehensive test cases** with 100% coverage
-        - **5x performance improvement** over previous versions
-        - **Advanced operators**: like, regex, between, startswith, endswith
-        - **Data analysis tools**: sum, avg, min, max, stats, value_counts
-        - **Smart indexing** for large datasets (>100 records)
-        - **Query caching** with LRU eviction
-        - **Memory optimization** - 40% reduction in usage
-        
-        ### 🚀 Performance
-        - Automatic indexing for datasets >100 records
-        - Query result caching for repeated operations
-        - Memory-efficient data structures
-        - Concurrent-safe operations
-        
-        ### 🛠 Developer Experience
-        - Full type hints for better IDE support
-        - Magic methods for Pythonic usage
-        - Comprehensive error handling
-        - jQuery-style method chaining
-        
-        ### 📊 Benchmarks
-        | Dataset Size | Query Time | Memory Usage | Improvement |
-        |--------------|------------|--------------|-------------|
-        | 600 records  | 1.22ms     | -40%         | 5x faster   |
-        | 3K records   | 6.28ms     | -40%         | 5x faster   |
-        | 6K records   | 12.74ms    | -40%         | 5x faster   |
-        
-        ## 🔧 Installation
-        
-        \`\`\`bash
-        pip install jsonQ==$VERSION
-        \`\`\`
-        
-        ## 📚 Documentation
-        
-        - [Complete API Reference](https://github.com/Srirammkm/jsonQ#-api-reference)
-        - [Real-World Examples](https://github.com/Srirammkm/jsonQ#-real-world-use-cases)
-        - [Performance Guide](https://github.com/Srirammkm/jsonQ#-performance--benchmarks)
-        
-        ## 🙏 Contributors
-        
-        Thank you to all contributors who made this release possible!
-        
-        ---
-        
-        **Full Changelog**: https://github.com/Srirammkm/jsonQ/compare/v2.0...v$VERSION
-        EOF
+      - name: Generate release notes
+        id: release_notes
+        run: |
+          echo "📝 Generating release notes..."
 
-    - name: Create Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        VERSION=${GITHUB_REF#refs/tags/v}
-        gh release create ${{ github.ref_name }} \
-          --title "jsonQ v$VERSION" \
-          --notes-file release_notes.md \
-          --latest
+          # Extract version from tag
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+          # Create release notes
+          cat > release_notes.md << EOF
+          # jsonQ v$VERSION Release
+
+          ## 🎉 What's New
+
+          This release includes comprehensive improvements to the jsonQ library:
+
+          ### ✨ Features
+          - **61 comprehensive test cases** with 100% coverage
+          - **5x performance improvement** over previous versions
+          - **Advanced operators**: like, regex, between, startswith, endswith
+          - **Data analysis tools**: sum, avg, min, max, stats, value_counts
+          - **Smart indexing** for large datasets (>100 records)
+          - **Query caching** with LRU eviction
+          - **Memory optimization** - 40% reduction in usage
+
+          ### 🚀 Performance
+          - Automatic indexing for datasets >100 records
+          - Query result caching for repeated operations
+          - Memory-efficient data structures
+          - Concurrent-safe operations
+
+          ### 🛠 Developer Experience
+          - Full type hints for better IDE support
+          - Magic methods for Pythonic usage
+          - Comprehensive error handling
+          - jQuery-style method chaining
+
+          ### 📊 Benchmarks
+          | Dataset Size | Query Time | Memory Usage | Improvement |
+          |--------------|------------|--------------|-------------|
+          | 600 records  | 1.22ms     | -40%         | 5x faster   |
+          | 3K records   | 6.28ms     | -40%         | 5x faster   |
+          | 6K records   | 12.74ms    | -40%         | 5x faster   |
+
+          ## 🔧 Installation
+
+          \`\`\`bash
+          pip install jsonQ==$VERSION
+          \`\`\`
+
+          ## 📚 Documentation
+
+          - [Complete API Reference](https://github.com/Srirammkm/jsonQ#-api-reference)
+          - [Real-World Examples](https://github.com/Srirammkm/jsonQ#-real-world-use-cases)
+          - [Performance Guide](https://github.com/Srirammkm/jsonQ#-performance--benchmarks)
+
+          ## 🙏 Contributors
+
+          Thank you to all contributors who made this release possible!
+
+          ---
+
+          **Full Changelog**: https://github.com/Srirammkm/jsonQ/compare/v2.0...v$VERSION
+          EOF
+
+      - name: Create Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "Creating release for version: $VERSION"
+          echo "Tag name: ${{ github.ref_name }}"
+
+          # Check if release already exists
+          if gh release view ${{ github.ref_name }} >/dev/null 2>&1; then
+            echo "Release already exists, updating..."
+            gh release edit ${{ github.ref_name }} \
+              --title "jsonQ v$VERSION" \
+              --notes-file release_notes.md \
+              --latest
+          else
+            echo "Creating new release..."
+            gh release create ${{ github.ref_name }} \
+              --title "jsonQ v$VERSION" \
+              --notes-file release_notes.md \
+              --latest
+          fi
 
   update-documentation:
     name: Update Documentation
     runs-on: ubuntu-latest
     needs: [build-and-publish]
     if: github.event_name == 'release' && github.event.action == 'published'
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Generate documentation
-      run: |
-        echo "📚 Generating documentation..."
-        
-        # Update version badges in README
-        VERSION=${GITHUB_REF#refs/tags/v}
-        sed -i "s/version-[0-9.]*/version-$VERSION/g" README.md
-        
-        # Generate API documentation
-        python -c "
-        import sys
-        sys.path.append('.')
-        from src.jquery import Query
-        import inspect
-        
-        print('📖 API Documentation Generated')
-        print(f'   Methods documented: {len([m for m in dir(Query) if not m.startswith(\"_\")])}')
-        print(f'   Version: $VERSION')
-        "
+      - name: Generate documentation
+        run: |
+          echo "📚 Generating documentation..."
 
-    - name: Update badges
-      run: |
-        echo "🏷️ Updating badges..."
-        # This would typically update documentation sites, wikis, etc.
-        echo "✅ Documentation updated for release"
+          # Update version badges in README
+          VERSION=${GITHUB_REF#refs/tags/v}
+          sed -i "s/version-[0-9.]*/version-$VERSION/g" README.md
+
+          # Generate API documentation
+          python -c "
+          import sys
+          sys.path.append('.')
+          from src.jquery import Query
+          import inspect
+
+          print('📖 API Documentation Generated')
+          print(f'   Methods documented: {len([m for m in dir(Query) if not m.startswith(\"_\")])}')
+          print(f'   Version: $VERSION')
+          "
+
+      - name: Update badges
+        run: |
+          echo "🏷️ Updating badges..."
+          # This would typically update documentation sites, wikis, etc.
+          echo "✅ Documentation updated for release"
 
   post-release-validation:
     name: Post-Release Validation
     runs-on: ubuntu-latest
     needs: [build-and-publish]
     if: github.event_name == 'release' && github.event.action == 'published'
-    
+
     steps:
-    - name: Wait for PyPI propagation
-      run: |
-        echo "⏳ Waiting for PyPI propagation..."
-        sleep 300  # Wait 5 minutes
+      - name: Wait for PyPI propagation
+        run: |
+          echo "⏳ Waiting for PyPI propagation..."
+          sleep 300  # Wait 5 minutes
 
-    - name: Test PyPI installation
-      run: |
-        echo "📦 Testing PyPI installation..."
-        pip install jsonQ --upgrade
-        python -c "
-        from jsonQ import Query
-        import json
-        
-        # Test basic functionality
-        data = [{'name': 'test', 'value': 42}]
-        query = Query(data)
-        result = query.where('value > 40').tolist()
-        
-        assert len(result) == 1
-        assert result[0]['name'] == 'test'
-        
-        print('✅ PyPI installation test passed')
-        print(f'   Package working correctly')
-        "
+      - name: Test PyPI installation
+        run: |
+          echo "📦 Testing PyPI installation..."
+          pip install jsonQ --upgrade
+          python -c "
+          from jsonQ import Query
+          import json
 
-    - name: Notify success
-      run: |
-        echo "🎉 Release completed successfully!"
-        echo "📦 Package published to PyPI"
-        echo "📚 Documentation updated"
-        echo "🏷️ GitHub release created"
-        echo "✅ All validation tests passed"
+          # Test basic functionality
+          data = [{'name': 'test', 'value': 42}]
+          query = Query(data)
+          result = query.where('value > 40').tolist()
+
+          assert len(result) == 1
+          assert result[0]['name'] == 'test'
+
+          print('✅ PyPI installation test passed')
+          print(f'   Package working correctly')
+          "
+
+      - name: Notify success
+        run: |
+          echo "🎉 Release completed successfully!"
+          echo "📦 Package published to PyPI"
+          echo "📚 Documentation updated"
+          echo "🏷️ GitHub release created"
+          echo "✅ All validation tests passed"
